# ida-exported-data

./: .gitignore  README.md  elucidate.py  harvester.py  hopi.json  iiif_utils.py  omeka.py  prezi_upgrader.py  pyproject.toml  seealso.py  serializer_utils.py  update_image_targets.py
backups/ida-starsky-text-meta/: http%3A%2F%2Fiiif.bodleian.ox.ac.uk%2Fiiif%2Fimage%2F5a090e3d-2139-4e1d-8a47-e7a82add1379  http%3A%2F%2Fimages.qdl.qa%2Fiiif%2Fimages%2F81055%2Fvdc_100000001524.0x000395%2FMss+Eur+F126_10_0001.jp2  http%3A%2F%2Fimages.qdl.qa%2Fiiif%2Fimages%2F81055%2Fvdc_100000001524.0x000395%2FMss+Eur+F126_10_0002.jp2  http%3A%2F%2Fimages.qdl.qa%2Fiiif%2Fimages%2F81055%2Fvdc_100000001524.0x000395%2FMss+Eur+F126_10_0003.jp2  http%3A%2F%2Fimages.qdl.qa%2Fiiif%2Fimages%2F81055%2Fvdc_100000001524.0x000395%2FMss+Eur+F126_10_0004.jp2  http%3A%2F%2Fimages.qdl.qa%2Fiiif%2Fimages%2F81055%2Fvdc_100000001524.0x000395%2FMss+Eur+F126_10_0005.jp2  http%3A%2F%2Fimages.qdl.qa%2Fiiif%2Fimages%2F81055%2Fvdc_100000001524.0x000395%2FMss+Eur+F126_10_0006.jp2  http%3A%2F%2Fimages.qdl.qa%2Fiiif%2Fimages%2F81055%2Fvdc_100000001524.0x000395%2FMss+Eur+F126_10_0007.jp2  http%3A%2F%2Fimages.qdl.qa%2Fiiif%2Fimages%2F81055%2Fvdc_100000001524.0x000395%2FMss+Eur+F126_10_0009.jp2  http%3A%2F%2Fimages.qdl.qa%2Fiiif%2Fimages%2F81055%2Fvdc_100000001524.0x000395%2FMss+Eur+F126_10_0010.jp2  http%3A%2F%2Fimages.qdl.qa%2Fiiif%2Fimages%2F81055%2Fvdc_100000001524.0x000395%2FMss+Eur+F126_10_0011.jp2  (+41137 more)
omeka/: Collection.json  Organization.json  Person.json  Place.json  School.json  Theme.json
(+59436 files in other folders)
