[tool.poetry]
name = "ida-exported-data"
version = "0.1.0"
description = "IDA data exports and related tools"
authors = ["Matt McGrattan <matt.mcgrattan@digirati.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
requests = "^2.27.1"
Django = "^4.0.3"
pyelucidate = "^0.3.3"
tqdm = "^4.63.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
